[package]
name = "injectclient"
version = "0.1.0"
authors = ["Cheat Dev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"

[dependencies]
serde_json = "1.0.60"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8.0"
cpal = "0.13.1"
clap = "2.33.3"
anyhow = "1.0.36"
opus = { git = "https://github.com/DoumanAsh/opus-rs/", branch = "new_opus_bindings" }
