[package]
name = "injectclient"
version = "0.1.0"
authors = ["Cheat Dev"]
edition = "2018"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[build-dependencies]
cc = "1.0.66"

[dependencies]
serde_json = "1.0.60"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8.0"
cpal = "0.13.1"
clap = "2.33.3"
anyhow = "1.0.37"
rubato = "0.5.2"
magnum-opus = "0.3.2"
rand = "0.8.0"
parking_lot = { version = "0.11", features = ["nightly"] }
tokio = { version = "1", features = ["full"] }
